fix layout issue
1. add height attr to widget object so that we can calculate the next
added widget's Y position

--- a/app/index.css
+++ b/app/index.css
@@ -4,6 +4,14 @@ html, body, .full-height{
 
 .abs-pos{
   position: absolute;
-  top: 0;
-  left: 0;
+}
+
+.widget{
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.widget:hover {
+  cursor: move;
 }
